--- a/substrate-sgx/sp-io/Cargo.toml
+++ b/substrate-sgx/sp-io/Cargo.toml
@@ -21,49 +21,49 @@ sgx_log       = { package = "log", git = "https://github.com/mesalock-linux/log-
 
 [dependencies.sp-std]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 default-features = false
 
 [dependencies.sp-core]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 default-features = false
 features=["full_crypto"]
 
 [dependencies.sp-state-machine]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 optional = true
 
 [dependencies.sp-runtime-interface]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 default-features = false
 
 [dependencies.sp-wasm-interface]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 default-features = false
 
 [dependencies.sp-tracing]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 default-features = false
 
 [dependencies.sp-trie]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 optional = true
 
 [dependencies.sp-keystore]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 default-features = false
 optional = true
 
 [dependencies.sp-externalities]
 git = "https://github.com/paritytech/substrate.git"
-branch = "master"
+branch = "polkadot-v0.9.7"
 optional = true
 
 [dependencies.sgx-externalities]
