--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -21,6 +21,8 @@ version = "2.0.0"
 hex-literal = { optional = true, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.101' }
 
+pallet-sgx-account-linker = { defualt-features = false, path = "../../litentry-pallets/pallets/sgx-account-linker"}
+
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -86,4 +88,5 @@ std = [
     'sp-std/std',
     'sp-transaction-pool/std',
     'sp-version/std',
+    'pallet-sgx-account-linker/std',
 ]
