add account linker

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     'runtime',
     'substrate-sgx/sp-io',
     'substrate-sgx/externalities',
+    'sgx-account-linker',
     'test_no_std'
 ]
 
