--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -21,7 +21,7 @@ version = "2.0.0"
 hex-literal = { optional = true, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.101' }
 
-pallet-sgx-account-linker = { defualt-features = false, git = "https://github.com/litentry/litentry-pallets.git", branch = "sgx-pallets" }
+pallet-sgx-account-linker = { default-features = false, git = "https://github.com/litentry/litentry-pallets.git", branch = "sgx-pallets" }
 
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", version = "3.0.0", branch = "master" }
